--- a/FakeAtlas/Localization/lang.ru-RU.xaml
+++ b/FakeAtlas/Localization/lang.ru-RU.xaml
@@ -5,6 +5,7 @@
     <v:String x:Key="m_Login">Логин</v:String>
     <v:String x:Key="m_Language">Язык</v:String>
     <v:String x:Key="m_Password">Пароль</v:String>
+    <v:String x:Key="m_Id">Идентификатор</v:String>
     <v:String x:Key="m_PasswordNotEquals">Пароли не совпадают</v:String>
     <v:String x:Key="m_RepeatPassword">Повторите пароль</v:String>
     <v:String x:Key="m_InputPassword">введите пароль</v:String>
