--- a/FakeAtlas/Views/AdminPage.xaml
+++ b/FakeAtlas/Views/AdminPage.xaml
@@ -28,7 +28,8 @@
             <Setter Property="FontSize" Value="12" />
         </Style>
     </UserControl.Resources>
-    <Grid>
+    <ScrollViewer>
+        <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="5"/>
             <RowDefinition Height="20"/>
@@ -51,7 +52,13 @@
             <RowDefinition Height="5"/>
             <RowDefinition Height="35"/>
             <RowDefinition Height="35"/>
-        </Grid.RowDefinitions>
+            <RowDefinition Height="5"/>
+            <RowDefinition Height="35"/>
+                <RowDefinition Height="5"/>
+                <RowDefinition Height="35"/>
+            <RowDefinition Height="35"/>
+            <RowDefinition Height="35"/>
+            </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="5"/>
             <ColumnDefinition Width="100"/>
@@ -77,14 +84,14 @@
         <Button  Grid.Column="1" Foreground="#FF0B0A22" Grid.Row="6"  Style="{DynamicResource LiteralButton}" HorizontalAlignment="Left" Content="{DynamicResource m_When}" Background="#FF2A2649"/>
         <Button  Grid.Column="1" Foreground="#FF0B0A22" Grid.Row="8"  Style="{DynamicResource LiteralButton}" HorizontalAlignment="Left" Content="{DynamicResource m_CostInfo}" Background="#FF2A2649"/>
         <Button  Grid.Column="1" Foreground="#FF0B0A22" Grid.Row="10" Style="{DynamicResource LiteralButton}" HorizontalAlignment="Left" Content="{DynamicResource m_CompanyName}" Background="#FF2A2649"/>
-        <TextBox Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="2" Grid.Column="2"  Grid.Row="13" Text="{Binding SelectedShipper.FullName, UpdateSourceTrigger=PropertyChanged}"/>
-        <TextBox Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="2" Grid.Column="2"  Grid.Row="15" Text="{Binding SelectedShipper.VehicleType, UpdateSourceTrigger=PropertyChanged}"  />
-        <TextBox Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="2" Grid.Column="2"  Grid.Row="17" Text="{Binding SelectedShipper.VehicleNum, UpdateSourceTrigger=PropertyChanged}"/>
-        
-        <TextBox Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="2" Grid.Column="2"  Grid.Row="2" Text="{Binding SelectedOrder.PathFrom, UpdateSourceTrigger=PropertyChanged}" />
-        <TextBox Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="2" Grid.Column="2"  Grid.Row="4" Text="{Binding SelectedOrder.PathTo, UpdateSourceTrigger=PropertyChanged}"/>
-        <TextBox Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="2" Grid.Column="2"  Grid.Row="6" Text="{Binding SelectedOrder.DepartureTime, UpdateSourceTrigger=PropertyChanged}" />
-        <TextBox Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="2" Grid.Column="2"  Grid.Row="8" Text="{Binding SelectedOrder.Cost, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="2" Grid.Column="2"  Grid.Row="13" Text="{Binding SelectedShipperCreating.FullName, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="2" Grid.Column="2"  Grid.Row="15" Text="{Binding SelectedShipperCreating.VehicleType, UpdateSourceTrigger=PropertyChanged}"  />
+            <TextBox Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="2" Grid.Column="2"  Grid.Row="17" Text="{Binding SelectedShipperCreating.VehicleNum, UpdateSourceTrigger=PropertyChanged}"/>
+
+            <TextBox Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="2" Grid.Column="2"  Grid.Row="2" Text="{Binding SelectedOrderCreating.PathFrom, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBox Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="2" Grid.Column="2"  Grid.Row="4" Text="{Binding SelectedOrderCreating.PathTo, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="2" Grid.Column="2"  Grid.Row="6" Text="{Binding SelectedOrderCreating.DepartureTime, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBox Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="2" Grid.Column="2"  Grid.Row="8" Text="{Binding SelectedOrderCreating.Cost, UpdateSourceTrigger=PropertyChanged}"/>
         <TextBox Style="{DynamicResource InputTextBox}" Grid.ColumnSpan="2" Grid.Column="2"  Grid.Row="10" Text="{Binding CompanyName, UpdateSourceTrigger=PropertyChanged}"/>
         <Button  Style="{DynamicResource InputButton}" Command="{Binding SaveCompanyCommand}" FontWeight="UltraBlack" Grid.Column="5" Grid.Row="17" Content="{DynamicResource m_Save}" FontSize="13"/>
         <Button  Style="{DynamicResource InputButton}" Command="{Binding SaveRouteCommand}" FontWeight="UltraBlack" Grid.Column="5" Grid.Row="10" Content="{DynamicResource m_Save}" FontSize="13"/>
@@ -101,7 +108,7 @@
                         <GridViewColumn DisplayMemberBinding="{Binding PathTo}" 
                   Header="{DynamicResource m_To}" Width="100"/>
                         <GridViewColumn DisplayMemberBinding="{Binding DepartureTime}" 
-                  Header="{DynamicResource m_When}" Width="100"/>
+                  Header="{DynamicResource m_When}" Width="auto"/>
                         <GridViewColumn DisplayMemberBinding="{Binding Cost}" 
                   Header="{DynamicResource m_CostInfo}" Width="100"/>
                         <GridViewColumn>
@@ -119,31 +126,55 @@
             </ListView>
         </ScrollViewer>
 
-        <ScrollViewer Grid.Row="13" Grid.Column="7" Grid.ColumnSpan="5" Grid.RowSpan="5">
-            <ListView Background="Transparent"
+                <ListView Background="Transparent" Grid.Row="13" Grid.Column="7" Grid.ColumnSpan="5" Grid.RowSpan="5"
+                          ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                          ScrollViewer.VerticalScrollBarVisibility="Auto"
     ItemsSource="{Binding Path=SelectedShippers, UpdateSourceTrigger=PropertyChanged}" 
                       SelectedItem="{Binding SelectedShipper}">
+                    <ListView.View>
+                        <GridView ColumnHeaderContainerStyle="{StaticResource GridViewColumnHeaderStyle1}">
+                            <GridViewColumn DisplayMemberBinding="{Binding FullName}" 
+                  Header="{DynamicResource m_CompanyName}" Width="100"/>
+                            <GridViewColumn DisplayMemberBinding="{Binding VehicleType}" 
+                  Header="{DynamicResource m_VehicleType}" Width="100"/>
+                            <GridViewColumn DisplayMemberBinding="{Binding VehicleNum}" 
+                  Header="{DynamicResource m_VehicleNum}" Width="100"/>
+                            <GridViewColumn>
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Button Style="{DynamicResource CloseRedButton}" 
+                                            Command="{Binding Path=DataContext.RemoveCompanyCommand, RelativeSource={RelativeSource AncestorType=ListView, 
+                                               Mode=FindAncestor}}"/>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                        </GridView>
+
+                    </ListView.View>
+                </ListView>
+                <ListView Grid.Row="20" Grid.Column="1" Grid.ColumnSpan="5" Grid.RowSpan="6" 
+                          Background="Transparent" ScrollViewer.HorizontalScrollBarVisibility="Visible"
+                          ScrollViewer.VerticalScrollBarVisibility="Visible"
+    ItemsSource="{Binding Path=SelectedUsers, UpdateSourceTrigger=PropertyChanged}" 
+                      SelectedItem="{Binding SelectedUser}">
                 <ListView.View>
                     <GridView ColumnHeaderContainerStyle="{StaticResource GridViewColumnHeaderStyle1}">
                         <GridViewColumn DisplayMemberBinding="{Binding FullName}" 
-                  Header="{DynamicResource m_CompanyName}" Width="100"/>
-                        <GridViewColumn DisplayMemberBinding="{Binding VehicleType}" 
-                  Header="{DynamicResource m_VehicleType}" Width="100"/>
-                        <GridViewColumn DisplayMemberBinding="{Binding VehicleNum}" 
-                  Header="{DynamicResource m_VehicleNum}" Width="100"/>
+                  Header="{DynamicResource m_Name}" Width="auto"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding UserLogin}" 
+                  Header="{DynamicResource m_Login}" Width="auto"/>
                         <GridViewColumn>
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <Button Style="{DynamicResource CloseRedButton}" 
-                                            Command="{Binding Path=DataContext.RemoveCompanyCommand, RelativeSource={RelativeSource AncestorType=ListView, 
+                                            Command="{Binding Path=DataContext.RemoveUserCommand, RelativeSource={RelativeSource AncestorType=ListView, 
                                                Mode=FindAncestor}}"/>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
                     </GridView>
-
                 </ListView.View>
             </ListView>
-        </ScrollViewer>
-    </Grid>
+        </Grid>
+    </ScrollViewer>
 </UserControl>
